Removed KROZO_ID